config vercel.json

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "vercel-build": "vite build",
+    "start": "vite preview --port 3000",
     "lint": "eslint .",
     "preview": "vite preview"
   },
